--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+.Login-container {
+  background: url("media/background.png") no-repeat;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.login-grid {
   min-height: 100vh;
+}
+
+@media (min-width: 600px) {
+  .Main-container {
+    margin-top: 84px;
+  }
+}
+
+@media (min-width: 0px) and (orientation: landscape) {
+  .Main-container {
+    margin-top: 68px;
+  }
+}
+
+.Main-container {
+  margin-top: 76px;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+.toolbar {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: flex-end;
+  padding: 0 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.content {
+  flex-grow: 1;
+  padding: 24px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bold {
+  font-weight: bold;
+}
+
+.Loading-indicator {
+  height: 100vh;
+}
+
+.Box-loading-indicator {
+  height: 100%;
+}
+
+.Facebook-login-button {
+  background-color: #4267B2;
+  color: #ffffff;
+}
+
+.fixedHeaderTable {
+  height: 80vh;
+  width: 100vw;
 }
